--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <title>恩西亚飞书言论生成器v0.1</title>
 </head>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
+<script src="./js/require.js"></script>
 <script src="./js/recgen.js"></script>
 <body>
 <form>
