--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <link rel="icon" type="image/png" sizes="16x16"  href="./images/favicon-16x16.png">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
+<meta http-equiv="cache-control" content="no-cache,no-store, must-revalidate" />
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
 <html lang="en">
 <head>
     <meta charset="UTF-8">
