--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>恩希亚飞书言论生成器v0.2</title>
+    <title>恩希亚言论生成器v0.2b</title>
     <script>
         (function(d) {
             var config = {
