--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <script src="./js/recgen.js"></script>
 <body>
 <form>
-    <input id="avatar" type="file" accept="image/*">
-    <input id="name" type="text" value="赤魔法师021"/>
-    <input id="message" type="text" value=""/>
-    <input type="button" value="Generate" onclick="generate()"/>
+    <？-input id="avatar" type="file" accept="image/*">
+    <？-input id="name" type="text" value="赤魔法师021"/>
+    <？-input id="message" type="text" value=""/>
+    <？-input type="button" value="Generate" onclick="generate()"/>
 </form>
 <canvas id="canvas"></canvas>
 
