--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
 <script src="./js/recgen.js"></script>
 <body>
-<form>
-    <？-input id="avatar" type="file" accept="image/*">
-    <？-input id="name" type="text" value="赤魔法师021"/>
-    <？-input id="message" type="text" value=""/>
-    <？-input type="button" value="Generate" onclick="generate()"/>
+<form style="visibility:hidden">
+    <input id="avatar" type="file" accept="image/*">
+    <input id="name" type="text" value="赤魔法师021"/>
+    <input id="message" type="text" value=""/>
+    <input type="button" value="Generate" onclick="generate()"/>
 </form>
 <canvas id="canvas"></canvas>
 
